Bug 697621 - rendering problem, probably clist related, with psdcmykog device
Summary: rendering problem, probably clist related, with psdcmykog device
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: PC Windows 7
: P4 normal
Assignee: Ray Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-01 01:10 UTC by Ken Sharp
Modified: 2021-10-11 07:32 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2017-03-01 01:10:39 UTC
This was an oversight when checking the regression bitmaps.

Go to https://ghostscript.com/~regression/release__gs/compare71.html search for '6245:'

At the bottom left corner of the first bitmap, just above the label "Page=1 PageSize=2480x3508 Res=600 TopLeft=(125,2046) W=516 H=960 388 X 2544 Y" there is light blue rectangular area containing two darker blue horizontal bars, and three darker blue circles. An erroneous lighter rectangular area can be seen intersecting the top of the circles and extending to either side.

I can reproduce this on the current HEAD (SHA ce437b88df500a184ae2ca15d67a019f57a11d20) using:

gswin32 -sDEVICE=psdcmykog -sOutputFile=out.psd 575_-_images_missing_blend_modes.pdf

Adding -r300 makes the problem go away so I suspect this may be clist related.
Comment 1 Ray Johnston 2017-03-01 06:27:58 UTC
Both 300 and 600 are banded, the default (600) uses bandheight 28 and with
-r300 the bandheight is 56. Changing the -dBnadHeight to 30 moves the
difference, slightly, so I agree that it is banding related.

First step, try and isolate this mess down to something simpler.
Comment 2 Ken Sharp 2021-10-11 07:32:26 UTC
This appears to have been fixed sometime during the course of the last 4.5 years.